crates/pcb-zen-core/tests/snapshots/input__config_optional_false_missing_emits_error_diagnostic.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
Error: top.zen:6:1-17 Error instantiating `Module`
Error: /Module.zen:5:13-74 Input 'led_color' is required but was not provided
