crates/pcb-zen-core/tests/snapshots/input__config_str.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 129
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "test_comp",
                    footprint: "test_footprint",
                    prefix: "U",
                    connections: {
                        "in": FrozenValue(
                            Net {
                                name: "1",
                                id: "<ID>",
                            },
                        ),
                        "out": FrozenValue(
                            Net {
                                name: "2",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "value": FrozenValue(
                            "",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "in",
                                "2": "out",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[
    ParameterInfo {
        name: "value",
        type_info: String,
        required: true,
        default_value: None,
        default_display: None,
        help: None,
    },
]
