crates/pcb-zen-core/tests/snapshots/input__config_string_to_physical_range.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
String to PhysicalRange conversion: success
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
    test: Module {
        path: test,
        source: "/child.zen",
    },
}
[]
