crates/pcb-zen-core/tests/snapshots/input__config_types.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 175
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "test",
                    type: "test_component",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "TEST",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[
    ParameterInfo {
        name: "str_config",
        type_info: String,
        required: true,
        default_value: None,
        default_display: None,
        help: None,
    },
    ParameterInfo {
        name: "int_config",
        type_info: Int,
        required: true,
        default_value: None,
        default_display: None,
        help: None,
    },
    ParameterInfo {
        name: "float_config",
        type_info: Float,
        required: true,
        default_value: None,
        default_display: None,
        help: None,
    },
    ParameterInfo {
        name: "bool_config",
        type_info: Bool,
        required: true,
        default_value: None,
        default_display: None,
        help: None,
    },
    ParameterInfo {
        name: "opt_str",
        type_info: String,
        required: false,
        default_value: Some(
            String("default_value"),
        ),
        default_display: Some(
            "\"default_value\"",
        ),
        help: None,
    },
    ParameterInfo {
        name: "opt_int",
        type_info: Int,
        required: false,
        default_value: Some(
            Number(42),
        ),
        default_display: Some(
            "42",
        ),
        help: None,
    },
    ParameterInfo {
        name: "opt_float",
        type_info: Float,
        required: false,
        default_value: Some(
            Number(3.14),
        ),
        default_display: Some(
            "3.14",
        ),
        help: None,
    },
    ParameterInfo {
        name: "opt_bool",
        type_info: Bool,
        required: false,
        default_value: Some(
            Bool(true),
        ),
        default_display: Some(
            "True",
        ),
        help: None,
    },
    ParameterInfo {
        name: "opt_no_default",
        type_info: String,
        required: false,
        default_value: None,
        default_display: None,
        help: None,
    },
    ParameterInfo {
        name: "net_io",
        type_info: Net,
        required: true,
        default_value: Some(
            Object {
                "name": String("net_io"),
                "net_id": Number(<ID>),
                "original_name": String("net_io"),
                "properties": Object {},
                "type_name": String("Net"),
            },
        ),
        default_display: Some(
            "net_io",
        ),
        help: None,
    },
    ParameterInfo {
        name: "opt_net_io",
        type_info: Net,
        required: false,
        default_value: Some(
            Object {
                "name": String("opt_net_io"),
                "net_id": Number(<ID>),
                "original_name": String("opt_net_io"),
                "properties": Object {},
                "type_name": String("Net"),
            },
        ),
        default_display: Some(
            "opt_net_io",
        ),
        help: None,
    },
    ParameterInfo {
        name: "power_io",
        type_info: Interface {
            name: "Power",
            pins: [
                (
                    "vcc",
                    Net,
                ),
                (
                    "gnd",
                    Net,
                ),
            ],
        },
        required: true,
        default_value: Some(
            Object {
                "fields": Object {
                    "gnd": Object {
                        "name": String("power_io_gnd"),
                        "net_id": Number(<ID>),
                        "original_name": String("power_io_gnd"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                    "vcc": Object {
                        "name": String("power_io_vcc"),
                        "net_id": Number(<ID>),
                        "original_name": String("power_io_vcc"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                },
            },
        ),
        default_display: Some(
            "Power(gnd=power_io_gnd, vcc=power_io_vcc)",
        ),
        help: None,
    },
    ParameterInfo {
        name: "opt_power_io",
        type_info: Interface {
            name: "Power",
            pins: [
                (
                    "vcc",
                    Net,
                ),
                (
                    "gnd",
                    Net,
                ),
            ],
        },
        required: false,
        default_value: Some(
            Object {
                "fields": Object {
                    "gnd": Object {
                        "name": String("opt_power_io_gnd"),
                        "net_id": Number(<ID>),
                        "original_name": String("opt_power_io_gnd"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                    "vcc": Object {
                        "name": String("opt_power_io_vcc"),
                        "net_id": Number(<ID>),
                        "original_name": String("opt_power_io_vcc"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                },
            },
        ),
        default_display: Some(
            "Power(gnd=opt_power_io_gnd, vcc=opt_power_io_vcc)",
        ),
        help: None,
    },
    ParameterInfo {
        name: "bus_io",
        type_info: Interface {
            name: "DataBus",
            pins: [
                (
                    "data",
                    Net,
                ),
                (
                    "clock",
                    Net,
                ),
                (
                    "enable",
                    Net,
                ),
            ],
        },
        required: true,
        default_value: Some(
            Object {
                "fields": Object {
                    "clock": Object {
                        "name": String("bus_io_clock"),
                        "net_id": Number(<ID>),
                        "original_name": String("bus_io_clock"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                    "data": Object {
                        "name": String("bus_io_data"),
                        "net_id": Number(<ID>),
                        "original_name": String("bus_io_data"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                    "enable": Object {
                        "name": String("bus_io_enable"),
                        "net_id": Number(<ID>),
                        "original_name": String("bus_io_enable"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                },
            },
        ),
        default_display: Some(
            "DataBus(clock=bus_io_clock, data=bus_io_data, enable=bus_io_enable)",
        ),
        help: None,
    },
    ParameterInfo {
        name: "system_io",
        type_info: Interface {
            name: "System",
            pins: [
                (
                    "power",
                    Interface {
                        name: "Power",
                        pins: [
                            (
                                "vcc",
                                Net,
                            ),
                            (
                                "gnd",
                                Net,
                            ),
                        ],
                    },
                ),
                (
                    "bus",
                    Interface {
                        name: "DataBus",
                        pins: [
                            (
                                "data",
                                Net,
                            ),
                            (
                                "clock",
                                Net,
                            ),
                            (
                                "enable",
                                Net,
                            ),
                        ],
                    },
                ),
                (
                    "reset",
                    Net,
                ),
            ],
        },
        required: true,
        default_value: Some(
            Object {
                "fields": Object {
                    "bus": Object {
                        "fields": Object {
                            "clock": Object {
                                "name": String("system_io_bus_clock"),
                                "net_id": Number(<ID>),
                                "original_name": String("system_io_bus_clock"),
                                "properties": Object {},
                                "type_name": String("Net"),
                            },
                            "data": Object {
                                "name": String("system_io_bus_data"),
                                "net_id": Number(<ID>),
                                "original_name": String("system_io_bus_data"),
                                "properties": Object {},
                                "type_name": String("Net"),
                            },
                            "enable": Object {
                                "name": String("system_io_bus_enable"),
                                "net_id": Number(<ID>),
                                "original_name": String("system_io_bus_enable"),
                                "properties": Object {},
                                "type_name": String("Net"),
                            },
                        },
                    },
                    "power": Object {
                        "fields": Object {
                            "gnd": Object {
                                "name": String("system_io_power_gnd"),
                                "net_id": Number(<ID>),
                                "original_name": String("system_io_power_gnd"),
                                "properties": Object {},
                                "type_name": String("Net"),
                            },
                            "vcc": Object {
                                "name": String("system_io_power_vcc"),
                                "net_id": Number(<ID>),
                                "original_name": String("system_io_power_vcc"),
                                "properties": Object {},
                                "type_name": String("Net"),
                            },
                        },
                    },
                    "reset": Object {
                        "name": String("system_io_reset"),
                        "net_id": Number(<ID>),
                        "original_name": String("system_io_reset"),
                        "properties": Object {},
                        "type_name": String("Net"),
                    },
                },
            },
        ),
        default_display: Some(
            "System(bus=DataBus(clock=system_io_bus_clock, data=system_io_bus_data, enable=system_io_bus_enable), power=Power(gnd=system_io_power_gnd, vcc=system_io_power_vcc), reset=system_io_reset)",
        ),
        help: None,
    },
]
