crates/pcb-zen-core/tests/snapshots/input__config_with_convert_function.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    test: Module {
        path: test,
        source: "/Module.zen",
        properties: {
            "current_unit": "FrozenValue(\"A\")",
            "current_value": "FrozenValue(StarlarkFloat(2.5))",
            "optional_power_is_none": "FrozenValue(StarlarkBool(true))",
            "voltage_unit": "FrozenValue(\"V\")",
            "voltage_value": "FrozenValue(StarlarkFloat(5.0))",
        },
    },
}
[]
