crates/pcb-zen-core/tests/snapshots/input__config_without_convert_fails_type_check.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
Error: top.zen:8:1-11:2 Error instantiating `Module`
Error: /Module.zen:12:11-83 Input 'voltage' (type) has wrong type for this placeholder: expected record(value=field(float), unit=field(str)), got "5V"
