crates/pcb-zen-core/tests/snapshots/input__errors_for_unspecified_non_generic_bom_component.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
Error: test.zen: Component 'U1' is included in the BOM but is missing part information. Set `Manufacturer_Part_Number` and `Manufacturer_Name` on the symbol, or pass `part=Part(...)`.
